showing time on results screen

--- a/results.html
+++ b/results.html
@@ -12,23 +12,26 @@
 <body>
 
   <!-- final score button -->
-    <div class="col-sm-8">
-      <button id="scores" class="btn">View High Scores</button>
-    </div>
+  <div class="col-sm-8">
+    <a href="highscrores.html"><button id="scores" class="btn">View High Scores</button></a>  
+  </div>
   </div>
 
 <!-- view high scores -->
-<div class="row">
-    <div class="col-md-12">
-      <div id="results">
-        <h1 id="title">All  done!</h1>
-        <p id="final-score">Your final score is <span id="final-score"></span></p>
-        <p id="initials">Enter your initials:</p>
-        <input type="text" name="initial" id="initial" placeholder="Initials" aria-label="Initials"/>
-        <button id="submit" class="btn">Submit</button> 
+<div class="text-center">
+    <div class="row">
+        <div class="col-md-12">
+          <div id="results">
+            <h1 id="title">All  done!</h1>
+            <h2 id="final-score">Your final score is <span id="final-score"></span></h2>
+            <p id="initials">Enter your initials:</p>
+            <input type="text" name="initial" id="initial" placeholder="Initials" aria-label="Initials"/>
+            <button id="submit" class="btn">Submit</button> 
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+</div>
+
   
 
   <script src="./assets/js/script.js"></script>
