--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div class="row">
       <div class="col-sm-8">
         <a href="highscrores.html"><button id="scores" class="btn">View High Scores</button></a>  
-        
       </div>
       <div class="col-sm-6 offset-sm-10">
         <h2 id="timer">Time: <span id="countdown"></span></h2>
@@ -42,16 +41,18 @@
   </div>
   
     <div id="container">
-      <div class="row">
-        <div class="col-md-12" >
-          <div id="questions-answers">
-          <p id="question"></p>
-          <div class="col-md-12">
-          <div id="answers"></div>
-          <p hidden id="right-wrong" class="right-wrong"></p>
+    <div class="text-center">
+        <div class="row">
+            <div class="col-md-12" >
+              <div id="questions-answers">
+              <p id="question"></p>
+              <div class="col-md-12">
+              <div id="answers"></div>
+              <p hidden id="right-wrong" class="right-wrong"></p>
+              </div>
+            </div> 
           </div>
-        </div> 
-      </div>
+        </div>
     </div>
   </div>
   
