--- a/results.html
+++ b/results.html
@@ -14,6 +14,7 @@
   <!-- final score button -->
   <div class="col-sm-8">
     <a href="highscrores.html"><button id="scores" class="btn">View High Scores</button></a>  
+    <a href="index.html"><button id="home" class="btn">Play Again!</button></a>
   </div>
   </div>
 
