--- a/results.html
+++ b/results.html
@@ -25,7 +25,7 @@
           <div id="results">
             <h1 id="title">All  done!</h1>
             <h2 id="final-score">Your final score is <span id="final-score"></span></h2>
-            <p id="initials">Enter your initials:</p>
+            <p id="initials">Enter your name:</p>
             <input type="text" name="initial" id="initial" placeholder="Initials" aria-label="Initials"/>
             <button id="submit" class="btn">Submit</button> 
           </div>
