score is showing in local storage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="col-md-12">
           <h1 id="title">Quizinator!</h1>
           <h2 id="title2">Do you have the knowledge?</h2>
-          <p id="challenge">You have one minute to answer the following code-related questions. <br />
+          <p id="challenge">You have 90 seconds to answer the following code-related questions. <br />
             Incorrect answers will penalize your score-time by 10 seconds!</p>
           <br />
           <p id="challenge">Goodluck!</p>
