got score to display on main screen

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
   
   
     <!-- Result page where you enter your initials -->
-    <div class="row" style="display: none">
+    <div class="text-center" >
       <div class="col-md-12">
         <div id="results">
           <h1 id="title">All  done!</h1>
-          <p id="final-score">Your final score is <span id="final-score"></span></p>
+          <p id="title">Your final score is <span id="final-score"></span></p>
           <p id="initials">Enter your initials:</p>
           <input type="text" name="initial" id="initial" placeholder="initials" aria-label="initials"/>
           <button id="submit" class="btn">Submit</button> 
