--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
   <!-- final score button -->
   <div class="col-sm-8">
     <a href="highscrores.html"><button id="scores" class="btn">View High Scores</button></a>  
-    <a href="index.html"><button id="home" class="btn">Play Again!</button></a>
+    <a href="index.html"><button id="" class="btn">Play Again!</button></a>
   </div>
   </div>
 
@@ -24,8 +24,8 @@
         <div class="col-md-12">
           <div id="results">
             <h1 id="title">All  done!</h1>
-            <h2 id="final-score">Your final score is <span id="final-score"></span></h2>
-            <p id="initials">Enter your name:</p>
+            <h2>Your final score is <span id="final-score"></span></h2>
+            <p id="initials">Enter your initials:</p>
             <input type="text" name="initial" id="initial" placeholder="Initials" aria-label="Initials"/>
             <button id="submit" class="btn">Submit</button> 
           </div>
@@ -35,6 +35,6 @@
 
   
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/scores.js"></script>
 </body>
 </html>
