working on submit button

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div id="results">
           <h1 id="title">All  done!</h1>
           <p id="title">Your final score is <span id="final-score"></span></p>
-          <p id="initials">Enter your initials:</p>
-          <input type="text" name="initial" id="initial" placeholder="initials" aria-label="initials"/>
+          <p id="initials">Enter your name:</p>
+          <input type="text" name="initial" id="initial" placeholder="¿cómo te llamas?" aria-label="initials"/>
           <button id="submit" class="btn">Submit</button> 
         </div>
       </div>
