got scores to save to local storage and display on highscore page

--- a/highscrores.html
+++ b/highscrores.html
@@ -20,19 +20,16 @@
   
   <!-- view high scores -->
   <div class="text-center">
-    <div class="row">
-        <div class="col-md-12 center-align">
           <div class="high-scores">
             <h2 id="score-header">High Scores!</h2>
             <ol id="score-list"></ol>
             <button id="clear" class="btn">Clear high scores</button>
           </div>
-        </div>
-      </div>
   </div>
   
     
   
+    <script src="./assets/js/scores.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
