working on getting results to answers to blink on screen

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
               <div id="questions-answers">
               <p id="question"></p>
               <div id="answers"></div>
+              <div id="show-correct"></div>
+              <div id="show-incorrect"></div>
               <p hidden id="right-wrong" class="right-wrong"></p>
             </div> 
     </div>
